# mini_proj_Report_card

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
report_card_cli/: Cargo.toml
report_card_cli/src/: main.rs
src/mini_proj_backend/: Cargo.toml  mini_proj_backend.did
src/mini_proj_backend/src/: lib.rs
src/mini_proj_frontend/: package.json  vite.config.js
src/mini_proj_frontend/src/: App.js  App.jsx
