[package]
name = "report_card_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
genpdf = "0.2.0"
ic-agent = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octocrab = "0.32.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
